# cel-c

./: .gitignore  CMakeLists.txt  GIT-ISSUE-INTEGRATION.md  GIT-WORKFLOW.md  MACROS-COMPREHENSION-COMPLETED.md  MEMORY-CHECK-REPORT.md  PHASE-1-TASKS-COMPLETED.md  PROJECT-STATUS.md  QUICKSTART.md  README.md  TASK-1.1-COMPLETED.md  TASK-2.1-COMPLETED.md  TASK-2.2-COMPLETED.md  TASK-3.4-COMPLETED.md  TASK-4.1-COMPLETED.md  TEST-FIX-REPORT.md  TEST-RUN-REPORT.md  TESTING.md
.github/ISSUE_TEMPLATE/: task-1.2-error-handling.md  task-1.3-memory-management.md  task-1.4-testing-framework.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_cel.c
docs/: API.md  BUILDING.md  QUICKSTART.md  TASK-2.3-COMPLETED.md  TASK-2.4-COMPLETED.md  TASK-3.1-COMPLETED.md  TASK-3.2-COMPLETED.md  TASK-4.1-COMPLETED.md
examples/: CMakeLists.txt
fuzz/: CMakeLists.txt  corpus.txt  fuzz_eval.c  fuzz_parser.c
include/cel/: cel_ast.h  cel_context.h  cel_error.h  cel_eval.h  cel_lexer.h  cel_macros.h  cel_memory.h  cel_parser.h  cel_program.h  cel_token.h  cel_value.h
scripts/: run_memcheck.sh  run_tests.sh
specs/: PHASE-1-IMPLEMENTATION-GUIDE.md  README.md  TASK-BREAKDOWN.md  TASK-DEPENDENCIES.md  c-design-01-overview-architecture.md  c-design-02-data-structures.md  c-design-03-algorithms-api.md  product-requirements.md
src/: CMakeLists.txt  cel_ast.c  cel_container.c  cel_context.c  cel_error.c  cel_eval.c  cel_lexer.c  cel_macros.c  cel_memory.c  cel_parser.c  cel_parser_api.c  cel_program.c  cel_value.c
tests/: CMakeLists.txt  test_compatibility.c  test_comprehension.c  test_context.c  test_conversions.c  test_error.c  test_eval.c  test_functions.c  test_helpers.h  test_json.c  test_lexer.c  test_list_map.c  test_macros.c  test_memory.c  test_parser.c  test_parser_integration.c  test_program.c  test_regex.c  test_time.c  test_timestamp_duration.c  test_value.c
tests/compatibility/: test_cases.json
